# ai-chat-bot

./: .env  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1368e32f3da9_fix_rbac_relationship.py  2bcefb003bce_add_sla_and_routing_fields.py  39ed6b2ef049_initial_chatbot_schema.py  7e0d2993ac06_add_user_role.py  99b4cf86c114_clean_uuid_schema.py  a2e76fe5775c_fix_rbac_relationship.py  a4f1d2b3c6e7_add_ticket_fields.py  b1c2d3f4e567_create_tickets_table.py  cada0755b062_add_user_indexes.py  fb5ae2bd1bbd_sync_schema_2026.py  ff6445046335_fix_ticket_relationships_indexes.py
app/: main.py
app/actions/: ai_orchestrator.py  audit.py  engine.py  escalation.py  notifications.py  routing.py  sla_monitor.py
app/api/: auth.py  chat.py  health.py  ingest.py  knowledge.py  secure_test.py  sentiment.py  tickets.py  users.py
app/auth/: context.py  dependencies.py  jwt.py  rbac.py
app/core/: config.py  logging.py  policies.py  scheduler.py
app/db/: deps.py  session.py  vector.py
app/llm/: client.py  guardrails.py
app/models/: __init__.py  base.py  chat_log.py  chunk.py  conversation.py  core.py  department.py  documents.py  enums.py  message.py  role.py  routing_rule.py  sentiment_log.py  sla_policy.py  ticket.py  user.py  user_role.py
app/rag/: chunker.py  embedding.py  filters.py  ingest.py  retriever.py  vector_schema.py
app/routers/: tickets.py
app/schemas/: auth.py  (+4 more)
docs/: API.md
env/: pyvenv.cfg
scripts/: backfill_metadata.py  check_qdrant_docs.py  rag_smoke_test.py  test_ingest.py
(+9 files in other folders)
